apt-get jdk适配更新